--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="node.js"></script>
 </head>
-<body>
+<body style="background-color: #7b3eb5;">
+	<header></header>
+	<div></div>
+	<footer></footer>
 
 </body>
 </html>
