--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="node.js"></script>
-</head>
-<body style="background-color: #7b3eb5;">
-	<header></header>
-	<div></div>
-	<footer></footer>
-
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="node.js"></script>
+  </head>
+  <body style="background-color: white">
+    <header></header>
+    <div></div>
+    <nav>
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+    </nav>
+    <footer></footer>
+  </body>
 </html>
